Fix html validation errors

--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -64,8 +64,8 @@
                     </p>
                     {% endif %}
                     {% if user.is_authenticated and review.user == user %}
-                    <button class="btn btn-dark btn-edit" review_id="{{ review.id }}" data-review_rating_id ="{{ review.rating}}">Edit</button>
-                    <button class="btn btn-danger btn-delete" review_id="{{ review.id }}">Delete</button>
+                    <button class="btn btn-dark btn-edit" data-review_id="{{ review.id }}" data-review_rating_id ="{{ review.rating}}">Edit</button>
+                    <button class="btn btn-danger btn-delete" data-review_id="{{ review.id }}">Delete</button>
                     {% endif %}
                 </div>
                 <!-- Our for loop ends here -->
@@ -93,11 +93,11 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+                <h5 class="modal-title" id="deleteModalLabel">Delete review?</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                Are you sure you want to delete your comment? This action cannot be undone.
+                Are you sure you want to delete your review? This action cannot be undone.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
