Edit README.md and amend typo in about.html

--- a/book/templates/book/about.html
+++ b/book/templates/book/about.html
@@ -11,7 +11,7 @@
             <!-- Title goes between these h2 tags -->
             <h2>About book_shelf</h2>
             <!-- Content goes directly underneath this -->
-            This online communicity commits to provide a freindly environment for people who recommend books and sharing their thoughts on the books.Basedd on the user's reading history, preferences, and interests, they can connect with like-minded readers.
+            This online communicity commits to provide a freindly environment for people who would recommend books and sharing their thoughts on the books.Based on the user's reading history, preferences, and interests, they can connect with like-minded readers.
         </div>
     </div>
     <div class="row">
