Edit the images quantity in each page and add aria-label for footer links

--- a/templates/base.html
+++ b/templates/base.html
@@ -133,22 +133,22 @@
                     <h5 class="text-uppercase" style="background-color: #69D1C5;">Social Media Links:</h5>
                     <ul class="list-unstyled mb-0 p-3 d-flex">
                         <li>
-                            <a href="https://www.facebook.com" target="_blank" style="height:2rem; margin:2rem;">
+                            <a href="https://www.facebook.com" target="_blank" style="height:2rem; margin:2rem;" aria-label="facebook">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.twitter.com" target="_blank" style="height:2rem; margin:2rem;">
+                            <a href="https://www.twitter.com" target="_blank" style="height:2rem; margin:2rem;" aria-label="twitter">
                                 <i class="fab fa-twitter"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.github.com" target="_blank" style="height:2rem; margin:2rem;">
+                            <a href="https://www.github.com" target="_blank" style="height:2rem; margin:2rem;" aria-label="github">
                                 <i class="fab fa-github"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com" target="_blank" style="height:2rem; margin:2rem;">
+                            <a href="https://www.linkedin.com" target="_blank" style="height:2rem; margin:2rem;" aria-label="linkedin">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </li>
