--- a/templates/base.html
+++ b/templates/base.html
@@ -130,7 +130,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                     <!-- Social media links -->
-                    <h5 class="text-uppercase" style="background-color: #69D1C5;">Social Media Links:</h5>
+                    <p class="text-uppercase" style="background-color: #69D1C5;">Social Media Links:</p>
                     <ul class="list-unstyled mb-0 p-3 d-flex">
                         <li>
                             <a href="https://www.facebook.com" target="_blank" style="height:2rem; margin:2rem;" aria-label="facebook">
